# opentrace

./: .gitignore  .pre-commit-config.yaml  AUTHORS.txt  CMakeLists.txt  CONTRIBUTING.md  INSTALL.txt  LICENSE.README  README.md  SECURITY.md  TRACE_AUTHORS.txt  run_build.sh  trace_plans.db
.githooks/pre-commit.d/: ggshield
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
3d-viewer/3d_cache/: 3d_plugin_manager.cpp
3d-viewer/3d_viewer/: eda_3d_viewer_frame.cpp
assets/icons/: icon.xpm
bitmap2component/: bitmap2cmp_frame.cpp
cmake/: FindTraceCli.cmake  KiCadVersion.cmake  TraceFullVersion.cmake  TraceVersion.cmake  config.h.cmake
cmake/BuildSteps/: WritePlatformMetadata_linux.cmake  WriteVersionHeader.cmake
cmake/InstallSteps/: SignMacOS.cmake
common/: CMakeLists.txt  ai_backend_client.cpp  ai_backend_client.h  ai_diff_analyzer.cpp  ai_diff_analyzer.h  ai_tool_executor.cpp  ai_tool_executor.h  bitmap_info.cpp  build_version.cpp  conversation_db.cpp  conversation_db.h  conversation_sync.cpp  conversation_sync.h  env_vars.cpp  filename_resolver.cpp  gestfich.cpp  kiway.cpp  local_history.cpp  paths.cpp  pgm_base.cpp  process_executor_win.cpp  single_top.cpp  textentry_tricks.cpp  wildcards_and_files_ext.cpp
common/auth/: auth_manager.cpp
common/dialog_about/: AboutDialog_main.cpp  dialog_about.cpp  dialog_about.h  dialog_about_base.cpp  dialog_about_base.h
common/dialogs/: dialog_configure_paths.cpp  panel_design_block_lib_table.cpp  panel_packages_and_updates.cpp  panel_packages_and_updates_base.cpp  panel_startwizard_libraries_base.cpp  panel_startwizard_privacy_base.cpp  panel_startwizard_settings_base.cpp
common/drawing_sheet/: ds_painter.cpp
common/gal/: CMakeLists.txt
common/kicad_curl/: kicad_curl_easy.cpp
common/libraries/: library_manager.cpp
common/process/: python_process_manager.cpp  python_process_manager.h
common/settings/: common_settings.cpp  kicad_settings.cpp  settings_manager.cpp
common/startwizard/: startwizard.cpp  startwizard_provider_privacy.cpp
common/tool/: action_menu.cpp  actions.cpp
common/widgets/: ai_chat_panel_base.cpp  ai_chat_panel_base.h  chat_message_panel.cpp  chat_message_panel.h  panel_design_block_chooser.h
eeschema/: CMakeLists.txt  annotate.cpp  connection_graph.cpp  eeschema_config.cpp  eeschema_id.h  eeschema_settings.cpp  eeschema_settings.h  files-io.cpp  menubar.cpp  sch_edit_frame.cpp  sch_edit_frame.h  schematic.cpp  schematic_undo_redo.cpp  symbol_chooser_timing.h  symbol_viewer_frame.cpp  toolbars_sch_editor.cpp
eeschema/dialogs/: panel_sch_data_sources.cpp
eeschema/sim/: ngspice.cpp
eeschema/symbol_editor/: menubar_symbol_editor.cpp  symbol_edit_frame.cpp  symbol_edit_frame.h  symbol_editor.cpp
eeschema/tools/: sch_actions.cpp  sch_actions.h  sch_editor_control.cpp  sch_editor_control.h
eeschema/widgets/: ai_chat_panel.cpp  ai_chat_panel.h  panel_remote_symbol.cpp  panel_symbol_chooser.h
gerbview/: gerbview_frame.cpp
include/: build_version.h  env_vars.h  gestfich.h  paths.h  pgm_base.h  process_executor.h  textentry_tricks.h  wildcards_and_files_ext.h
include/auth/: auth_manager.h
include/bitmaps/: bitmaps_list.h
include/drawing_sheet/: ds_proxy_view_item.h
include/settings/: kicad_settings.h
kicad/: CMakeLists.txt  kicad.cpp  kicad_cli.cpp  kicad_doc.icns  kicad_id.h  kicad_manager_frame.cpp  kicad_manager_frame.h  menubar.cpp  project_tree.cpp  project_tree_item.cpp  project_tree_pane.cpp  project_tree_pane.h  trace.icns  tree_file_type.h  update_manager.cpp
kicad/cli/: command_version.cpp
kicad/dialogs/: dialog_update_notice.cpp  dialog_update_notice_base.cpp  dialog_update_notice_base.fbp  template_default_html.h
kicad/tools/: kicad_manager_control.cpp
pagelayout_editor/: pl_editor_frame.cpp
pcb_calculator/: pcb_calculator_frame.cpp
pcbnew/: CMakeLists.txt  board.cpp  files.cpp  footprint_edit_frame.cpp  footprint_edit_frame.h  footprint_viewer_frame.cpp  menubar_footprint_editor.cpp  menubar_pcb_editor.cpp  pcb_edit_frame.cpp  pcb_edit_frame.h  pcbnew_id.h  pcbnew_settings.cpp  pcbnew_settings.h  toolbars_pcb_editor.cpp
pcbnew/specctra_import_export/: specctra.cpp  specctra.h  specctra_export.cpp  specctra_import.cpp
pcbnew/tools/: board_editor_control.cpp  board_editor_control.h  pcb_actions.cpp  pcb_actions.h
pcbnew/widgets/: ai_chat_panel.cpp  ai_chat_panel.h
qa/: CMakeLists.txt
qa/tests/: CMakeLists.txt
resources/: CMakeLists.txt
resources/bitmaps_png/: CMakeLists.txt
resources/msw/: bitmap2component.rc  cvpcb-dll.rc  eeschema-dll.rc  eeschema.rc  gerbview-dll.rc  gerbview.rc  kicad.rc  kicommon-dll.rc  kipython-dll.rc  kiwin32-dll.rc  kiwin32.rc  pcb_calculator-dll.rc  pcb_calculator.rc  pcbnew-dll.rc  pcbnew.rc  pl_editor-dll.rc  pl_editor.rc  qa_common.rc  qa_eeschema.rc  qa_gerbview.rc  qa_kicad2step.rc  qa_kimath.rc  qa_pcbnew.rc  qa_spice.rc  trace.rc
resources/project_template/: CMakeLists.txt
scripting/: CMakeLists.txt  python_scripting.cpp
scripts/: compile_python_to_bytecode.py  requirements.txt
signing/: CMakeLists.txt
tools/newstroke/: CMakeLists.txt
trace/: __init__.py
trace/common/: __init__.py  sexp_helpers.py  sexp_parser.py
trace/eeschema/: __init__.py  net_router.py  sexp_to_trace_json.py  trace.py  trace_converter.py  trace_json_to_sexp.py  trace_parser.py  trace_sch.ebnf  wire_helpers.py
trace/pcbnew/: sexp_to_trace_json.py  trace.py  trace_converter.py  trace_json_to_sexp.py  trace_parser.py  trace_pcb.ebnf
trace_assets/: convert_assets.sh  trace_background_32x32.icns  trace_dark_bg.icns  trace_logo_32x32.icns  trace_logo_dark_32x32.icns  trace_logo_with_name_32x32.icns  trace_logo_with_name_dark_32x32.icns  trace_white_bg.icns
trace_assets/1024x1024/: trace_dark_bg_1024x1024.icns
trace_assets/128x128/: trace_dark_bg_128x128.icns
trace_assets/16x16/: trace_dark_bg_16x16.icns
trace_assets/256x256/: trace_dark_bg_256x256.icns
trace_assets/32x32/: trace_dark_bg_32x32.icns
trace_assets/48x48/: trace_dark_bg_48x48.icns
translation/: CMakeLists.txt
(+27 files in other folders)
